chore: Rip out unnecessary interfaces, update JDK, switch everything to Gradle, update Gradle version