@@ -7,16 +7,17 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import soliloquy.specs.graphics.renderables.providers.StaticMouseCursorProvider;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
+import static inaugural.soliloquy.tools.collections.Collections.listOf;
+import static inaugural.soliloquy.tools.collections.Collections.mapOf;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static soliloquy.specs.common.valueobjects.Pair.pairOf;
 
-class StaticMouseCursorPreloaderTaskTests {
+public class StaticMouseCursorPreloaderTaskTests {
     private final String STATIC_MOUSE_CURSOR_ID_1 = "staticMouseCursorId1";
     private final String STATIC_MOUSE_CURSOR_ID_2 = "staticMouseCursorId2";
 
@@ -28,10 +29,10 @@ class StaticMouseCursorPreloaderTaskTests {
     private final Long STATIC_MOUSE_CURSOR_MOUSE_1 = 123123L;
     private final Long STATIC_MOUSE_CURSOR_MOUSE_2 = 456456L;
 
-    private final HashMap<String, Long> STATIC_MOUSE_CURSORS = new HashMap<String, Long>() {{
-        put(STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_1, STATIC_MOUSE_CURSOR_MOUSE_1);
-        put(STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_2, STATIC_MOUSE_CURSOR_MOUSE_2);
-    }};
+    private final Map<String, Long> STATIC_MOUSE_CURSORS = mapOf(
+        pairOf(STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_1, STATIC_MOUSE_CURSOR_MOUSE_1),
+        pairOf(STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_2, STATIC_MOUSE_CURSOR_MOUSE_2)
+    );
 
     private final StaticMouseCursorDefinitionDTO STATIC_MOUSE_CURSOR_DTO_1 =
             new StaticMouseCursorDefinitionDTO(STATIC_MOUSE_CURSOR_ID_1,
@@ -41,27 +42,27 @@ class StaticMouseCursorPreloaderTaskTests {
                     STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_2);
 
     private final Collection<StaticMouseCursorDefinitionDTO> STATIC_MOUSE_CURSOR_DEFINITION_DTOS =
-            new ArrayList<StaticMouseCursorDefinitionDTO>() {{
-                add(STATIC_MOUSE_CURSOR_DTO_1);
-                add(STATIC_MOUSE_CURSOR_DTO_2);
-            }};
+            listOf(
+                STATIC_MOUSE_CURSOR_DTO_1,
+                STATIC_MOUSE_CURSOR_DTO_2
+            );
 
     private final FakeStaticMouseCursorProviderFactory FACTORY =
             new FakeStaticMouseCursorProviderFactory();
 
-    private final ArrayList<StaticMouseCursorProvider> RESULTS = new ArrayList<>();
+    private final List<StaticMouseCursorProvider> RESULTS = listOf();
 
-    private StaticMouseCursorPreloaderTask _staticMouseCursorPreloaderTask;
+    private StaticMouseCursorPreloaderTask staticMouseCursorPreloaderTask;
 
     @BeforeEach
-    void setUp() {
-        _staticMouseCursorPreloaderTask = new StaticMouseCursorPreloaderTask(
+    public void setUp() {
+        staticMouseCursorPreloaderTask = new StaticMouseCursorPreloaderTask(
                 STATIC_MOUSE_CURSORS::get, STATIC_MOUSE_CURSOR_DEFINITION_DTOS, FACTORY,
                 RESULTS::add);
     }
 
     @Test
-    void testConstructorWithInvalidParams() {
+    public void testConstructorWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(null, STATIC_MOUSE_CURSOR_DEFINITION_DTOS,
                         FACTORY, RESULTS::add));
@@ -77,45 +78,35 @@ class StaticMouseCursorPreloaderTaskTests {
                         RESULTS::add));
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(STATIC_MOUSE_CURSORS::get,
-                        new ArrayList<>(), FACTORY,
+                        listOf(), FACTORY,
                         RESULTS::add));
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(STATIC_MOUSE_CURSORS::get,
-                        new ArrayList<StaticMouseCursorDefinitionDTO>() {{
-                            add(null);
-                        }},
+                        listOf((StaticMouseCursorDefinitionDTO) null),
                         FACTORY,
                         RESULTS::add));
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(STATIC_MOUSE_CURSORS::get,
-                        new ArrayList<StaticMouseCursorDefinitionDTO>() {{
-                            add(new StaticMouseCursorDefinitionDTO(null,
-                                    STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_1));
-                        }},
+                        listOf(new StaticMouseCursorDefinitionDTO(null,
+                                    STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_1)),
                         FACTORY,
                         RESULTS::add));
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(STATIC_MOUSE_CURSORS::get,
-                        new ArrayList<StaticMouseCursorDefinitionDTO>() {{
-                            add(new StaticMouseCursorDefinitionDTO("",
-                                    STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_1));
-                        }},
+                        listOf(new StaticMouseCursorDefinitionDTO("",
+                                    STATIC_MOUSE_CURSOR_RELATIVE_LOCATION_1)),
                         FACTORY,
                         RESULTS::add));
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(STATIC_MOUSE_CURSORS::get,
-                        new ArrayList<StaticMouseCursorDefinitionDTO>() {{
-                            add(new StaticMouseCursorDefinitionDTO(STATIC_MOUSE_CURSOR_ID_1,
-                                    null));
-                        }},
+                        listOf(new StaticMouseCursorDefinitionDTO(STATIC_MOUSE_CURSOR_ID_1,
+                                    null)),
                         FACTORY,
                         RESULTS::add));
         assertThrows(IllegalArgumentException.class, () ->
                 new StaticMouseCursorPreloaderTask(STATIC_MOUSE_CURSORS::get,
-                        new ArrayList<StaticMouseCursorDefinitionDTO>() {{
-                            add(new StaticMouseCursorDefinitionDTO(STATIC_MOUSE_CURSOR_ID_1,
-                                    ""));
-                        }},
+                        listOf(new StaticMouseCursorDefinitionDTO(STATIC_MOUSE_CURSOR_ID_1,
+                                    "")),
                         FACTORY,
                         RESULTS::add));
 
@@ -125,18 +116,18 @@ class StaticMouseCursorPreloaderTaskTests {
     }
 
     @Test
-    void testRun() {
-        _staticMouseCursorPreloaderTask.run();
+    public void testRun() {
+        staticMouseCursorPreloaderTask.run();
 
         assertEquals(2, FACTORY.Inputs.size());
-        int index = 0;
+        var index = 0;
         for (StaticMouseCursorDefinitionDTO staticMouseCursorDefinitionDTO :
                 STATIC_MOUSE_CURSOR_DEFINITION_DTOS) {
             List<StaticMouseCursorProvider> matchingProviders = RESULTS.stream()
                     .filter(provider -> provider.id().equals(staticMouseCursorDefinitionDTO.Id))
-                    .collect(Collectors.toList());
+                    .toList();
             assertEquals(1, matchingProviders.size());
-            StaticMouseCursorProvider matchingProvider = matchingProviders.get(0);
+            StaticMouseCursorProvider matchingProvider = matchingProviders.getFirst();
             assertEquals(index == 0 ? STATIC_MOUSE_CURSOR_MOUSE_1 : STATIC_MOUSE_CURSOR_MOUSE_2,
                     matchingProvider.provide(789789L));
             index++;
