@@ -6,29 +6,32 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import soliloquy.specs.common.entities.Action;
+import soliloquy.specs.common.valueobjects.FloatBox;
 import soliloquy.specs.common.valueobjects.Pair;
-import soliloquy.specs.common.valueobjects.Vertex;
 import soliloquy.specs.graphics.renderables.FiniteAnimationRenderable;
 import soliloquy.specs.graphics.renderables.RenderableWithMouseEvents.MouseEventInputs;
 import soliloquy.specs.graphics.renderables.colorshifting.ColorShift;
 import soliloquy.specs.graphics.renderables.providers.ProviderAtTime;
-import soliloquy.specs.graphics.rendering.FloatBox;
 import soliloquy.specs.graphics.rendering.RenderableStack;
 import soliloquy.specs.graphics.rendering.RenderingBoundaries;
 
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
 import static inaugural.soliloquy.graphics.api.Constants.WHOLE_SCREEN;
+import static inaugural.soliloquy.tools.collections.Collections.listOf;
+import static inaugural.soliloquy.tools.collections.Collections.mapOf;
 import static inaugural.soliloquy.tools.random.Random.randomInt;
 import static inaugural.soliloquy.tools.random.Random.randomLongWithInclusiveFloor;
+import static inaugural.soliloquy.tools.testing.Assertions.once;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static soliloquy.specs.common.valueobjects.FloatBox.floatBoxOf;
+import static soliloquy.specs.common.valueobjects.Vertex.vertexOf;
 
-class FiniteAnimationRenderableImplTests {
+public class FiniteAnimationRenderableImplTests {
     int ANIMATION_DURATION = 555;
     private final String ANIMATION_SUPPORTING_ID = "animationSupportingId";
     private final FakeAnimation ANIMATION_SUPPORTING_MOUSE_EVENTS =
@@ -38,9 +41,8 @@ class FiniteAnimationRenderableImplTests {
             new FakeAnimation(ANIMATION_NOT_SUPPORTING_ID, ANIMATION_DURATION, false);
     private final FakeProviderAtTime<Float> BORDER_THICKNESS_PROVIDER = new FakeProviderAtTime<>();
     private final FakeProviderAtTime<Color> BORDER_COLOR_PROVIDER = new FakeProviderAtTime<>();
-    private final HashMap<Integer, Action<MouseEventInputs>> ON_PRESS_ACTIONS =
-            new HashMap<>();
-    private final ArrayList<ProviderAtTime<ColorShift>> COLOR_SHIFT_PROVIDERS = new ArrayList<>();
+    private final Map<Integer, Action<MouseEventInputs>> ON_PRESS_ACTIONS = mapOf();
+    private final List<ProviderAtTime<ColorShift>> COLOR_SHIFT_PROVIDERS = listOf();
     private final FakeStaticProvider<FloatBox> RENDERING_AREA_PROVIDER =
             new FakeStaticProvider<>(null);
     private final int Z = randomInt();
@@ -65,7 +67,7 @@ class FiniteAnimationRenderableImplTests {
 
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         mockContainingStack = mock(RenderableStack.class);
         mockRenderingBoundaries = mock(RenderingBoundaries.class);
         when(mockRenderingBoundaries.currentBoundaries()).thenReturn(WHOLE_SCREEN);
@@ -91,7 +93,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testConstructorWithInvalidParameters() {
+    public void testConstructorWithInvalidParameters() {
         assertThrows(IllegalArgumentException.class, () -> new FiniteAnimationRenderableImpl(
                 null, BORDER_THICKNESS_PROVIDER,
                 BORDER_COLOR_PROVIDER, COLOR_SHIFT_PROVIDERS, RENDERING_AREA_PROVIDER, Z, UUID,
@@ -229,13 +231,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetInterfaceName() {
-        assertEquals(FiniteAnimationRenderable.class.getCanonicalName(),
-                finiteAnimationRenderableWithMouseEvents.getInterfaceName());
-    }
-
-    @Test
-    void testAnimationId() {
+    public void testAnimationId() {
         assertEquals(ANIMATION_SUPPORTING_ID,
                 finiteAnimationRenderableWithMouseEvents.animationId());
         assertEquals(ANIMATION_NOT_SUPPORTING_ID,
@@ -243,7 +239,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetBorderThicknessProvider() {
+    public void testGetAndSetBorderThicknessProvider() {
         assertSame(BORDER_THICKNESS_PROVIDER,
                 finiteAnimationRenderableWithMouseEvents.getBorderThicknessProvider());
         assertSame(BORDER_THICKNESS_PROVIDER,
@@ -263,13 +259,13 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testSetBorderThicknessProviderWithInvalidParams() {
+    public void testSetBorderThicknessProviderWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents.setBorderThicknessProvider(null));
     }
 
     @Test
-    void testGetAndSetBorderColorProvider() {
+    public void testGetAndSetBorderColorProvider() {
         assertSame(BORDER_COLOR_PROVIDER,
                 finiteAnimationRenderableWithMouseEvents.getBorderColorProvider());
         assertSame(BORDER_COLOR_PROVIDER,
@@ -287,13 +283,13 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testSetBorderColorProviderWithInvalidParams() {
+    public void testSetBorderColorProviderWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents.setBorderColorProvider(null));
     }
 
     @Test
-    void testMostRecentTimestamp() {
+    public void testMostRecentTimestamp() {
         assertEquals(MOST_RECENT_TIMESTAMP,
                 finiteAnimationRenderableWithMouseEvents.mostRecentTimestamp());
         assertEquals(MOST_RECENT_TIMESTAMP,
@@ -301,7 +297,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testStartAndEndTimestamps() {
+    public void testStartAndEndTimestamps() {
         assertEquals(START_TIMESTAMP,
                 finiteAnimationRenderableWithMouseEvents.startTimestamp());
         assertEquals(START_TIMESTAMP,
@@ -313,7 +309,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testReportPause() {
+    public void testReportPause() {
         finiteAnimationRenderableWithMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
         finiteAnimationRenderableWithoutMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
 
@@ -324,7 +320,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testReportUnpauseUpdatesStartAndEndTimestamps() {
+    public void testReportUnpauseUpdatesStartAndEndTimestamps() {
         long pauseDuration = 789789L;
 
         finiteAnimationRenderableWithMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
@@ -352,7 +348,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testPauseWhilePaused() {
+    public void testPauseWhilePaused() {
         finiteAnimationRenderableWithMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
         finiteAnimationRenderableWithoutMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
 
@@ -363,7 +359,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testUnpauseWhileUnpaused() {
+    public void testUnpauseWhileUnpaused() {
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents.reportUnpause(999999L));
         assertThrows(IllegalArgumentException.class, () ->
@@ -371,7 +367,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetCapturesMouseEvents() {
+    public void testGetAndSetCapturesMouseEvents() {
         assertTrue(finiteAnimationRenderableWithMouseEvents.getCapturesMouseEvents());
         assertFalse(finiteAnimationRenderableWithoutMouseEvents.getCapturesMouseEvents());
 
@@ -383,7 +379,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testPressAndSetOnPress() {
+    public void testPressAndSetOnPress() {
         assertThrows(UnsupportedOperationException.class, () ->
                 finiteAnimationRenderableWithoutMouseEvents.press(2, 0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -392,7 +388,7 @@ class FiniteAnimationRenderableImplTests {
         finiteAnimationRenderableWithMouseEvents.setOnPress(2, mockOnPressAction);
 
         finiteAnimationRenderableWithMouseEvents.press(2, TIMESTAMP);
-        verify(mockOnPressAction, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP, finiteAnimationRenderableWithMouseEvents)));
+        verify(mockOnPressAction, once()).run(eq(MouseEventInputs.of(TIMESTAMP, finiteAnimationRenderableWithMouseEvents)));
 
         //noinspection unchecked
         Action<MouseEventInputs> newOnPress = mock(Action.class);
@@ -400,15 +396,15 @@ class FiniteAnimationRenderableImplTests {
 
         finiteAnimationRenderableWithMouseEvents.press(2, TIMESTAMP + 1);
 
-        verify(newOnPress, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
+        verify(newOnPress, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
 
         finiteAnimationRenderableWithMouseEvents.press(0, TIMESTAMP + 2);
 
-        verify(newOnPress, times(1)).run(any());
+        verify(newOnPress, once()).run(any());
     }
 
     @Test
-    void testPressActionIds() {
+    public void testPressActionIds() {
         String id1 = "id1";
         String id2 = "id2";
         String id3 = "id3";
@@ -428,7 +424,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testReleaseAndSetOnRelease() {
+    public void testReleaseAndSetOnRelease() {
         assertThrows(UnsupportedOperationException.class, () ->
                 finiteAnimationRenderableWithoutMouseEvents.release(2, 0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -441,11 +437,11 @@ class FiniteAnimationRenderableImplTests {
         finiteAnimationRenderableWithMouseEvents.setOnRelease(2, newOnRelease);
         finiteAnimationRenderableWithMouseEvents.release(2, TIMESTAMP + 1);
 
-        verify(newOnRelease, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
+        verify(newOnRelease, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
     }
 
     @Test
-    void testReleaseActionIds() {
+    public void testReleaseActionIds() {
         String id1 = "id1";
         String id2 = "id2";
         String id3 = "id3";
@@ -465,7 +461,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testPressOrReleaseMethodsWithInvalidButtons() {
+    public void testPressOrReleaseMethodsWithInvalidButtons() {
         long timestamp = 456456L;
 
         assertThrows(IllegalArgumentException.class, () ->
@@ -488,7 +484,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testMouseOverAndSetOnMouseOver() {
+    public void testMouseOverAndSetOnMouseOver() {
         assertThrows(UnsupportedOperationException.class, () ->
                 finiteAnimationRenderableWithoutMouseEvents.mouseOver(0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -496,18 +492,18 @@ class FiniteAnimationRenderableImplTests {
 
         finiteAnimationRenderableWithMouseEvents.mouseOver(TIMESTAMP);
 
-        verify(mockOnMouseOverAction, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP, finiteAnimationRenderableWithMouseEvents)));
+        verify(mockOnMouseOverAction, once()).run(eq(MouseEventInputs.of(TIMESTAMP, finiteAnimationRenderableWithMouseEvents)));
 
         //noinspection unchecked
         Action<MouseEventInputs> newOnMouseOver = mock(Action.class);
         finiteAnimationRenderableWithMouseEvents.setOnMouseOver(newOnMouseOver);
         finiteAnimationRenderableWithMouseEvents.mouseOver(TIMESTAMP + 1);
 
-        verify(newOnMouseOver, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
+        verify(newOnMouseOver, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
     }
 
     @Test
-    void testMouseOverActionId() {
+    public void testMouseOverActionId() {
         String mouseOverActionId = "mouseOverActionId";
 
         assertThrows(UnsupportedOperationException.class, () ->
@@ -525,7 +521,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testMouseLeaveAndSetOnMouseLeave() {
+    public void testMouseLeaveAndSetOnMouseLeave() {
         assertThrows(UnsupportedOperationException.class, () ->
                 finiteAnimationRenderableWithoutMouseEvents.mouseLeave(0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -533,18 +529,18 @@ class FiniteAnimationRenderableImplTests {
 
         finiteAnimationRenderableWithMouseEvents.mouseLeave(TIMESTAMP);
 
-        verify(mockOnMouseLeaveAction, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP, finiteAnimationRenderableWithMouseEvents)));
+        verify(mockOnMouseLeaveAction, once()).run(eq(MouseEventInputs.of(TIMESTAMP, finiteAnimationRenderableWithMouseEvents)));
 
         //noinspection unchecked
         Action<MouseEventInputs> newOnMouseLeave = mock(Action.class);
         finiteAnimationRenderableWithMouseEvents.setOnMouseLeave(newOnMouseLeave);
         finiteAnimationRenderableWithMouseEvents.mouseLeave(TIMESTAMP + 1);
 
-        verify(newOnMouseLeave, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
+        verify(newOnMouseLeave, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1, finiteAnimationRenderableWithMouseEvents)));
     }
 
     @Test
-    void testMouseLeaveActionId() {
+    public void testMouseLeaveActionId() {
         String mouseLeaveActionId = "mouseLeaveActionId";
 
         assertThrows(UnsupportedOperationException.class, () ->
@@ -562,7 +558,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testProvide() {
+    public void testProvide() {
         int msAfterStartTimestampForMidpointFrame = 333;
 
         finiteAnimationRenderableWithMouseEvents.provide(START_TIMESTAMP - 1);
@@ -583,31 +579,31 @@ class FiniteAnimationRenderableImplTests {
 
         assertEquals(5, ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.size());
         assertEquals(0,
-                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(0).item1());
+                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(0).FIRST);
         assertEquals(0,
-                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(1).item1());
+                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(1).FIRST);
         assertEquals(msAfterStartTimestampForMidpointFrame,
-                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(2).item1());
+                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(2).FIRST);
         assertEquals(ANIMATION_DURATION,
-                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(3).item1());
+                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(3).FIRST);
         assertEquals(ANIMATION_DURATION,
-                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(4).item1());
+                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(4).FIRST);
 
         assertEquals(5, ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.size());
         assertEquals(0,
-                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(0).item1());
+                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(0).FIRST);
         assertEquals(0,
-                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(1).item1());
+                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(1).FIRST);
         assertEquals(msAfterStartTimestampForMidpointFrame,
-                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(2).item1());
+                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(2).FIRST);
         assertEquals(ANIMATION_DURATION,
-                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(3).item1());
+                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(3).FIRST);
         assertEquals(ANIMATION_DURATION,
-                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(4).item1());
+                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(4).FIRST);
     }
 
     @Test
-    void testProvideWhenPaused() {
+    public void testProvideWhenPaused() {
         finiteAnimationRenderableWithMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
         finiteAnimationRenderableWithoutMouseEvents.reportPause(PAUSED_TIMESTAMP_2);
 
@@ -616,14 +612,14 @@ class FiniteAnimationRenderableImplTests {
 
         assertEquals(1, ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.size());
         assertEquals(PAUSED_TIMESTAMP_2 - START_TIMESTAMP,
-                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(0).item1());
+                (int) ANIMATION_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.getFirst().FIRST);
         assertEquals(1, ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.size());
         assertEquals(PAUSED_TIMESTAMP_2 - START_TIMESTAMP,
-                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.get(0).item1());
+                (int) ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS.SnippetsProvided.getFirst().FIRST);
     }
 
     @Test
-    void testUnpauseUpdatesStartAndEndTimestamps() {
+    public void testUnpauseUpdatesStartAndEndTimestamps() {
         long pauseTimestamp = 777777L;
         long unpauseTimestamp = 888888L;
 
@@ -645,9 +641,9 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testMouseEventPauseUnpauseAndProvideCallsToOutdatedTimestamps() {
+    public void testMouseEventPauseUnpauseAndProvideCallsToOutdatedTimestamps() {
         long timestamp = 456456L;
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(0f, 0f, 1f, 1f);
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(0f, 0f, 1f, 1f);
         ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet = new FakeAnimationFrameSnippet();
 
         finiteAnimationRenderableWithMouseEvents.press(0, timestamp);
@@ -667,7 +663,7 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp - 1));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp - 1));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp - 1));
 
         finiteAnimationRenderableWithMouseEvents.release(0, timestamp + 1);
         assertThrows(IllegalArgumentException.class, () ->
@@ -686,7 +682,7 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp));
 
         finiteAnimationRenderableWithMouseEvents.mouseOver(timestamp + 2);
         assertThrows(IllegalArgumentException.class, () ->
@@ -705,7 +701,7 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp + 1));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 1));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 1));
 
         finiteAnimationRenderableWithMouseEvents.mouseLeave(timestamp + 3);
         assertThrows(IllegalArgumentException.class, () ->
@@ -724,9 +720,9 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp + 2));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 2));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 2));
 
-        finiteAnimationRenderableWithMouseEvents.capturesMouseEventAtPoint(Vertex.of(0f, 0f),
+        finiteAnimationRenderableWithMouseEvents.capturesMouseEventAtPoint(vertexOf(0f, 0f),
                 timestamp + 4);
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents.press(0, timestamp + 3));
@@ -744,7 +740,7 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp + 3));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 3));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 3));
 
         finiteAnimationRenderableWithMouseEvents.reportPause(timestamp + 5);
         assertThrows(IllegalArgumentException.class, () ->
@@ -763,7 +759,7 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp + 4));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 4));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 4));
 
         finiteAnimationRenderableWithMouseEvents.reportUnpause(timestamp + 6);
         assertThrows(IllegalArgumentException.class, () ->
@@ -782,7 +778,7 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp + 5));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 5));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 5));
 
         finiteAnimationRenderableWithMouseEvents.provide(timestamp + 7);
         assertThrows(IllegalArgumentException.class, () ->
@@ -801,11 +797,11 @@ class FiniteAnimationRenderableImplTests {
                 finiteAnimationRenderableWithMouseEvents.provide(timestamp + 6));
         assertThrows(IllegalArgumentException.class, () ->
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 6));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 6));
     }
 
     @Test
-    void testColorShiftProviders() {
+    public void testColorShiftProviders() {
         assertSame(COLOR_SHIFT_PROVIDERS,
                 finiteAnimationRenderableWithMouseEvents.colorShiftProviders());
         assertSame(COLOR_SHIFT_PROVIDERS,
@@ -813,7 +809,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetRenderingAreaProvider() {
+    public void testGetAndSetRenderingAreaProvider() {
         assertSame(RENDERING_AREA_PROVIDER,
                 finiteAnimationRenderableWithMouseEvents.getRenderingDimensionsProvider());
         assertSame(RENDERING_AREA_PROVIDER,
@@ -833,7 +829,7 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetZ() {
+    public void testGetAndSetZ() {
         assertEquals(Z, finiteAnimationRenderableWithMouseEvents.getZ());
         assertEquals(Z, finiteAnimationRenderableWithoutMouseEvents.getZ());
 
@@ -846,12 +842,12 @@ class FiniteAnimationRenderableImplTests {
         assertEquals(newZ, finiteAnimationRenderableWithMouseEvents.getZ());
         assertEquals(newZ, finiteAnimationRenderableWithoutMouseEvents.getZ());
 
-        verify(mockContainingStack, times(1)).add(finiteAnimationRenderableWithMouseEvents);
-        verify(mockContainingStack, times(1)).add(finiteAnimationRenderableWithoutMouseEvents);
+        verify(mockContainingStack, once()).add(finiteAnimationRenderableWithMouseEvents);
+        verify(mockContainingStack, once()).add(finiteAnimationRenderableWithoutMouseEvents);
     }
 
     @Test
-    void testCapturesMouseEventAtPoint() {
+    public void testCapturesMouseEventAtPoint() {
         ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet = new FakeAnimationFrameSnippet();
         ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.LeftX = 250;
         ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.RightX = 750;
@@ -859,119 +855,74 @@ class FiniteAnimationRenderableImplTests {
         ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.BottomY = 2500;
         ((FakeImage) ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.Image).Width = 1000;
         ((FakeImage) ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.Image).Height = 3000;
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(-0.5f, -2f, 0.75f, 0.5f);
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(-0.5f, -2f, 0.75f, 0.5f);
 
         boolean capturesMouseEventAtPoint =
                 finiteAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0.123f, 0.456f), 789L);
+                        .capturesMouseEventAtPoint(vertexOf(0.123f, 0.456f), 789L);
 
         assertTrue(capturesMouseEventAtPoint);
-        ArrayList<Pair<Integer, Integer>> capturesMouseEventsAtPixelInputs =
+        List<Pair<Integer, Integer>> capturesMouseEventsAtPixelInputs =
                 ((FakeImage) ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.Image)
                         .CapturesMouseEventsAtPixelInputs;
         assertEquals(1, capturesMouseEventsAtPixelInputs.size());
         assertEquals(
                 (int) ((((0.123f - (-0.5f)) / (0.75f - (-0.5f))) * (750 - 250)) + 250),
-                (int) capturesMouseEventsAtPixelInputs.get(0).item1());
+                (int) capturesMouseEventsAtPixelInputs.getFirst().FIRST);
         assertEquals(
                 (int) ((((0.456f - (-2.0f)) / (0.5f - (-2.0f))) * (2500 - 1000)) + 1000),
-                (int) capturesMouseEventsAtPixelInputs.get(0).item2());
+                (int) capturesMouseEventsAtPixelInputs.getFirst().SECOND);
         assertEquals(1, RENDERING_AREA_PROVIDER.TimestampInputs.size());
-        assertEquals(789L, (long) RENDERING_AREA_PROVIDER.TimestampInputs.get(0));
+        assertEquals(789L, (long) RENDERING_AREA_PROVIDER.TimestampInputs.getFirst());
     }
 
     @Test
-    void testCapturesMouseEventAtPointDoesNotExceedRenderingBoundaries() {
+    public void testCapturesMouseEventAtPointDoesNotExceedRenderingBoundaries() {
         ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet = new FakeAnimationFrameSnippet();
         ((FakeImage) ANIMATION_SUPPORTING_MOUSE_EVENTS.AnimationFrameSnippet.Image)
                 .SupportsMouseEventCapturing = true;
         RENDERING_AREA_PROVIDER.ProvidedValue = WHOLE_SCREEN;
-        when(mockRenderingBoundaries.currentBoundaries()).thenReturn(new FloatBox() {
-            @Override
-            public float leftX() {
-                return 0f;
-            }
-
-            @Override
-            public float topY() {
-                return 0f;
-            }
-
-            @Override
-            public float rightX() {
-                return 0.5f;
-            }
-
-            @Override
-            public float bottomY() {
-                return 1f;
-            }
-
-            @Override
-            public float width() {
-                return 0;
-            }
-
-            @Override
-            public float height() {
-                return 0;
-            }
-
-            @Override
-            public FloatBox intersection(FloatBox floatBox) throws IllegalArgumentException {
-                return null;
-            }
-
-            @Override
-            public FloatBox translate(float v, float v1) {
-                return null;
-            }
-
-            @Override
-            public String getInterfaceName() {
-                return null;
-            }
-        });
+        when(mockRenderingBoundaries.currentBoundaries()).thenReturn(floatBoxOf(0f, 0f, 0.5f, 1f));
 
         assertTrue(finiteAnimationRenderableWithMouseEvents.capturesMouseEventAtPoint(
-                Vertex.of(0.499f, 0f), MOST_RECENT_TIMESTAMP));
+                vertexOf(0.499f, 0f), MOST_RECENT_TIMESTAMP));
         assertFalse(finiteAnimationRenderableWithMouseEvents.capturesMouseEventAtPoint(
-                Vertex.of(0.501f, 0f), MOST_RECENT_TIMESTAMP));
+                vertexOf(0.501f, 0f), MOST_RECENT_TIMESTAMP));
     }
 
     @Test
-    void testCapturesMouseEventAtPointWithInvalidParams() {
+    public void testCapturesMouseEventAtPointWithInvalidArgs() {
         float verySmallNumber = 0.0001f;
 
         assertThrows(UnsupportedOperationException.class, () ->
                 finiteAnimationRenderableWithoutMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(.5f, .5f), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(.5f, .5f), 0L));
 
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(.5f, .5f, 1.5f, 1.5f);
-
-        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(.5f - verySmallNumber, .75f), 0L));
-        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(1f + verySmallNumber, .75f), 0L));
-        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(.75f, .5f - verySmallNumber), 0L));
-        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(.75f, 1.5f + verySmallNumber), 0L));
-
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(-0.5f, -0.5f, 0.5f, 0.5f);
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(.5f, .5f, 1.5f, 1.5f);
 
         assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(0f - verySmallNumber, .25f), 0L));
+                .capturesMouseEventAtPoint(vertexOf(.5f - verySmallNumber, .75f), 0L));
         assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(0.5f + verySmallNumber, .25f), 0L));
+                .capturesMouseEventAtPoint(vertexOf(1f + verySmallNumber, .75f), 0L));
         assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(.25f, 0f - verySmallNumber), 0L));
+                .capturesMouseEventAtPoint(vertexOf(.75f, .5f - verySmallNumber), 0L));
         assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(.25f, 0.5f + verySmallNumber), 0L));
+                .capturesMouseEventAtPoint(vertexOf(.75f, 1.5f + verySmallNumber), 0L));
+
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(-0.5f, -0.5f, 0.5f, 0.5f);
+
+        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
+                .capturesMouseEventAtPoint(vertexOf(0f - verySmallNumber, .25f), 0L));
+        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
+                .capturesMouseEventAtPoint(vertexOf(0.5f + verySmallNumber, .25f), 0L));
+        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
+                .capturesMouseEventAtPoint(vertexOf(.25f, 0f - verySmallNumber), 0L));
+        assertThrows(IllegalArgumentException.class, () -> finiteAnimationRenderableWithMouseEvents
+                .capturesMouseEventAtPoint(vertexOf(.25f, 0.5f + verySmallNumber), 0L));
     }
 
     @Test
-    void testContainingStack() {
+    public void testContainingStack() {
         assertSame(mockContainingStack,
                 finiteAnimationRenderableWithMouseEvents.containingStack());
         assertSame(mockContainingStack,
@@ -979,27 +930,19 @@ class FiniteAnimationRenderableImplTests {
     }
 
     @Test
-    void testDelete() {
+    public void testDelete() {
         finiteAnimationRenderableWithMouseEvents.delete();
         assertNull(finiteAnimationRenderableWithMouseEvents.containingStack());
-        verify(mockContainingStack, times(1)).remove(finiteAnimationRenderableWithMouseEvents);
+        verify(mockContainingStack, once()).remove(finiteAnimationRenderableWithMouseEvents);
 
         finiteAnimationRenderableWithoutMouseEvents.delete();
         assertNull(finiteAnimationRenderableWithoutMouseEvents.containingStack());
-        verify(mockContainingStack, times(1)).remove(finiteAnimationRenderableWithoutMouseEvents);
+        verify(mockContainingStack, once()).remove(finiteAnimationRenderableWithoutMouseEvents);
     }
 
     @Test
-    void testUuid() {
+    public void testUuid() {
         assertSame(UUID, finiteAnimationRenderableWithMouseEvents.uuid());
         assertSame(UUID, finiteAnimationRenderableWithoutMouseEvents.uuid());
-    }
-
-    @Test
-    void testArchetype() {
-        assertThrows(UnsupportedOperationException.class,
-                finiteAnimationRenderableWithMouseEvents::archetype);
-        assertThrows(UnsupportedOperationException.class,
-                finiteAnimationRenderableWithoutMouseEvents::archetype);
     }
 }
