@@ -6,36 +6,39 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import soliloquy.specs.common.entities.Action;
+import soliloquy.specs.common.valueobjects.FloatBox;
 import soliloquy.specs.common.valueobjects.Pair;
-import soliloquy.specs.common.valueobjects.Vertex;
 import soliloquy.specs.graphics.renderables.GlobalLoopingAnimationRenderable;
 import soliloquy.specs.graphics.renderables.RenderableWithMouseEvents.MouseEventInputs;
 import soliloquy.specs.graphics.renderables.colorshifting.ColorShift;
 import soliloquy.specs.graphics.renderables.providers.ProviderAtTime;
-import soliloquy.specs.graphics.rendering.FloatBox;
 import soliloquy.specs.graphics.rendering.RenderableStack;
 import soliloquy.specs.graphics.rendering.RenderingBoundaries;
 
 import java.awt.*;
-import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
 import static inaugural.soliloquy.graphics.api.Constants.WHOLE_SCREEN;
+import static inaugural.soliloquy.tools.collections.Collections.listOf;
+import static inaugural.soliloquy.tools.collections.Collections.mapOf;
 import static inaugural.soliloquy.tools.random.Random.*;
+import static inaugural.soliloquy.tools.testing.Assertions.once;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static soliloquy.specs.common.valueobjects.FloatBox.floatBoxOf;
+import static soliloquy.specs.common.valueobjects.Vertex.vertexOf;
 
-class GlobalLoopingAnimationRenderableImplTests {
+public class GlobalLoopingAnimationRenderableImplTests {
     private final FakeGlobalLoopingAnimation GLOBAL_LOOPING_ANIMATION_SUPPORTING_MOUSE_EVENTS =
             new FakeGlobalLoopingAnimation(true);
     private final FakeGlobalLoopingAnimation GLOBAL_LOOPING_ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS =
             new FakeGlobalLoopingAnimation(false);
     private final FakeProviderAtTime<Float> BORDER_THICKNESS_PROVIDER = new FakeProviderAtTime<>();
     private final FakeProviderAtTime<Color> BORDER_COLOR_PROVIDER = new FakeProviderAtTime<>();
-    private final HashMap<Integer, Action<MouseEventInputs>> ON_PRESS_ACTIONS = new HashMap<>();
-    private final ArrayList<ProviderAtTime<ColorShift>> COLOR_SHIFT_PROVIDERS = new ArrayList<>();
+    private final Map<Integer, Action<MouseEventInputs>> ON_PRESS_ACTIONS = mapOf();
+    private final List<ProviderAtTime<ColorShift>> COLOR_SHIFT_PROVIDERS = listOf();
     private final FakeStaticProvider<FloatBox> RENDERING_AREA_PROVIDER =
             new FakeStaticProvider<>(null);
     private final int Z = randomInt();
@@ -53,7 +56,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     private GlobalLoopingAnimationRenderable globalLoopingAnimationRenderableWithoutMouseEvents;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         mockContainingStack = mock(RenderableStack.class);
         mockRenderingBoundaries = mock(RenderingBoundaries.class);
         when(mockRenderingBoundaries.currentBoundaries()).thenReturn(WHOLE_SCREEN);
@@ -83,7 +86,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testConstructorWithInvalidParameters() {
+    public void testConstructorWithInvalidParameters() {
         assertThrows(IllegalArgumentException.class, () -> new GlobalLoopingAnimationRenderableImpl(
                 null, BORDER_THICKNESS_PROVIDER,
                 BORDER_COLOR_PROVIDER, ON_PRESS_ACTIONS, null, mockOnMouseOverAction,
@@ -194,13 +197,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetInterfaceName() {
-        assertEquals(GlobalLoopingAnimationRenderable.class.getCanonicalName(),
-                globalLoopingAnimationRenderableWithMouseEvents.getInterfaceName());
-    }
-
-    @Test
-    void testGetAndSetGlobalLoopingAnimation() {
+    public void testGetAndSetGlobalLoopingAnimation() {
         assertSame(GLOBAL_LOOPING_ANIMATION_SUPPORTING_MOUSE_EVENTS,
                 globalLoopingAnimationRenderableWithMouseEvents.getGlobalLoopingAnimation());
         assertSame(GLOBAL_LOOPING_ANIMATION_NOT_SUPPORTING_MOUSE_EVENTS,
@@ -221,7 +218,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testSetGlobalLoopingAnimationWithInvalidParams() {
+    public void testSetGlobalLoopingAnimationWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents.setGlobalLoopingAnimation(null));
         assertThrows(IllegalArgumentException.class, () ->
@@ -233,7 +230,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetBorderThicknessProvider() {
+    public void testGetAndSetBorderThicknessProvider() {
         assertSame(BORDER_THICKNESS_PROVIDER,
                 globalLoopingAnimationRenderableWithMouseEvents.getBorderThicknessProvider());
         assertSame(BORDER_THICKNESS_PROVIDER,
@@ -253,19 +250,19 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testSetBorderThicknessProviderWithInvalidParams() {
+    public void testSetBorderThicknessProviderWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents.setBorderThicknessProvider(null));
     }
 
     @Test
-    void testSetBorderColorProviderWithInvalidParams() {
+    public void testSetBorderColorProviderWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithoutMouseEvents.setBorderColorProvider(null));
     }
 
     @Test
-    void testGetAndSetBorderColorProvider() {
+    public void testGetAndSetBorderColorProvider() {
         assertSame(BORDER_COLOR_PROVIDER,
                 globalLoopingAnimationRenderableWithMouseEvents.getBorderColorProvider());
         assertSame(BORDER_COLOR_PROVIDER,
@@ -285,7 +282,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetCapturesMouseEvents() {
+    public void testGetAndSetCapturesMouseEvents() {
         assertTrue(globalLoopingAnimationRenderableWithMouseEvents.getCapturesMouseEvents());
         assertFalse(globalLoopingAnimationRenderableWithoutMouseEvents.getCapturesMouseEvents());
 
@@ -297,7 +294,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testPressAndSetOnPress() {
+    public void testPressAndSetOnPress() {
         assertThrows(UnsupportedOperationException.class, () ->
                 globalLoopingAnimationRenderableWithoutMouseEvents.press(2, 0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -308,7 +305,7 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.press(2, TIMESTAMP);
 
-        verify(mockOnPressAction, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP,
+        verify(mockOnPressAction, once()).run(eq(MouseEventInputs.of(TIMESTAMP,
                 globalLoopingAnimationRenderableWithMouseEvents)));
 
         //noinspection unchecked
@@ -317,16 +314,16 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.press(2, TIMESTAMP + 1);
 
-        verify(newOnPress, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1,
+        verify(newOnPress, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1,
                 globalLoopingAnimationRenderableWithMouseEvents)));
 
         globalLoopingAnimationRenderableWithMouseEvents.press(0, TIMESTAMP + 2);
 
-        verify(newOnPress, times(1)).run(any());
+        verify(newOnPress, once()).run(any());
     }
 
     @Test
-    void testPressActionIds() {
+    public void testPressActionIds() {
         String id1 = "id1";
         String id2 = "id2";
         String id3 = "id3";
@@ -346,7 +343,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testReleaseAndSetOnRelease() {
+    public void testReleaseAndSetOnRelease() {
         assertThrows(UnsupportedOperationException.class, () ->
                 globalLoopingAnimationRenderableWithoutMouseEvents.release(2, 0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -361,12 +358,12 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.release(2, TIMESTAMP + 1);
 
-        verify(newOnRelease, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1,
+        verify(newOnRelease, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1,
                 globalLoopingAnimationRenderableWithMouseEvents)));
     }
 
     @Test
-    void testReleaseActionIds() {
+    public void testReleaseActionIds() {
         String id1 = randomString();
         String id2 = randomString();
         String id3 = randomString();
@@ -386,7 +383,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testPressOrReleaseMethodsWithInvalidButtons() {
+    public void testPressOrReleaseMethodsWithInvalidButtons() {
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents.setOnPress(-1,
                         new FakeAction<>()));
@@ -411,7 +408,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testMouseOverAndSetOnMouseOver() {
+    public void testMouseOverAndSetOnMouseOver() {
         assertThrows(UnsupportedOperationException.class, () ->
                 globalLoopingAnimationRenderableWithoutMouseEvents.mouseOver(0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -420,7 +417,7 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.mouseOver(TIMESTAMP);
 
-        verify(mockOnMouseOverAction, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP,
+        verify(mockOnMouseOverAction, once()).run(eq(MouseEventInputs.of(TIMESTAMP,
                 globalLoopingAnimationRenderableWithMouseEvents)));
 
         //noinspection unchecked
@@ -429,12 +426,12 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.mouseOver(TIMESTAMP + 1);
 
-        verify(newOnMouseOver, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1,
+        verify(newOnMouseOver, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1,
                 globalLoopingAnimationRenderableWithMouseEvents)));
     }
 
     @Test
-    void testMouseOverActionId() {
+    public void testMouseOverActionId() {
         String mouseOverActionId = "mouseOverActionId";
 
         assertThrows(UnsupportedOperationException.class, () ->
@@ -452,7 +449,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testMouseLeaveAndSetOnMouseLeave() {
+    public void testMouseLeaveAndSetOnMouseLeave() {
         assertThrows(UnsupportedOperationException.class, () ->
                 globalLoopingAnimationRenderableWithoutMouseEvents.mouseLeave(0L));
         assertThrows(UnsupportedOperationException.class, () ->
@@ -461,7 +458,7 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(TIMESTAMP);
 
-        verify(mockOnMouseLeaveAction, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP, globalLoopingAnimationRenderableWithMouseEvents)));
+        verify(mockOnMouseLeaveAction, once()).run(eq(MouseEventInputs.of(TIMESTAMP, globalLoopingAnimationRenderableWithMouseEvents)));
 
         //noinspection unchecked
         Action<MouseEventInputs> newOnMouseLeave = mock(Action.class);
@@ -469,11 +466,11 @@ class GlobalLoopingAnimationRenderableImplTests {
 
         globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(TIMESTAMP + 1);
 
-        verify(newOnMouseLeave, times(1)).run(eq(MouseEventInputs.of(TIMESTAMP + 1, globalLoopingAnimationRenderableWithMouseEvents)));
+        verify(newOnMouseLeave, once()).run(eq(MouseEventInputs.of(TIMESTAMP + 1, globalLoopingAnimationRenderableWithMouseEvents)));
     }
 
     @Test
-    void testMouseLeaveActionId() {
+    public void testMouseLeaveActionId() {
         String mouseLeaveActionId = "mouseLeaveActionId";
 
         assertThrows(UnsupportedOperationException.class, () ->
@@ -491,8 +488,8 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testMouseEventCallsToOutdatedTimestamps() {
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(0f, 0f, 1f, 1f);
+    public void testMouseEventCallsToOutdatedTimestamps() {
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(0f, 0f, 1f, 1f);
         GLOBAL_LOOPING_ANIMATION_SUPPORTING_MOUSE_EVENTS.Animation = new FakeAnimation(789789);
 
         long timestamp = 456456L;
@@ -508,7 +505,7 @@ class GlobalLoopingAnimationRenderableImplTests {
                 globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(timestamp - 1));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp - 1));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp - 1));
 
         globalLoopingAnimationRenderableWithMouseEvents.release(0, timestamp + 1);
         assertThrows(IllegalArgumentException.class, () ->
@@ -521,7 +518,7 @@ class GlobalLoopingAnimationRenderableImplTests {
                 globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(timestamp));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp));
 
         globalLoopingAnimationRenderableWithMouseEvents.mouseOver(timestamp + 2);
         assertThrows(IllegalArgumentException.class, () ->
@@ -534,7 +531,7 @@ class GlobalLoopingAnimationRenderableImplTests {
                 globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(timestamp + 1));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 1));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 1));
 
         globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(timestamp + 3);
         assertThrows(IllegalArgumentException.class, () ->
@@ -547,10 +544,10 @@ class GlobalLoopingAnimationRenderableImplTests {
                 globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(timestamp + 2));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 2));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 2));
 
         globalLoopingAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 4);
+                .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 4);
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents.press(0, timestamp + 3));
         assertThrows(IllegalArgumentException.class, () ->
@@ -561,11 +558,11 @@ class GlobalLoopingAnimationRenderableImplTests {
                 globalLoopingAnimationRenderableWithMouseEvents.mouseLeave(timestamp + 3));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), timestamp + 3));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), timestamp + 3));
     }
 
     @Test
-    void testColorShiftProviders() {
+    public void testColorShiftProviders() {
         assertSame(COLOR_SHIFT_PROVIDERS,
                 globalLoopingAnimationRenderableWithMouseEvents.colorShiftProviders());
         assertSame(COLOR_SHIFT_PROVIDERS,
@@ -573,7 +570,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testGetAndSetRenderingAreaProvider() {
+    public void testGetAndSetRenderingAreaProvider() {
         assertSame(RENDERING_AREA_PROVIDER,
                 globalLoopingAnimationRenderableWithMouseEvents
                         .getRenderingDimensionsProvider());
@@ -597,7 +594,7 @@ class GlobalLoopingAnimationRenderableImplTests {
     }
 
     @Test
-    void testCapturesMouseEventAtPoint() {
+    public void testCapturesMouseEventAtPoint() {
         FakeAnimationFrameSnippet animationFrameSnippet = new FakeAnimationFrameSnippet();
         animationFrameSnippet.OffsetX = 0.0123f;
         animationFrameSnippet.OffsetY = 0.0456f;
@@ -611,28 +608,28 @@ class GlobalLoopingAnimationRenderableImplTests {
         FakeImage snippetImage = (FakeImage) animationFrameSnippet.Image;
         snippetImage.Width = 1000;
         snippetImage.Height = 3000;
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(-0.5f, -2f, 0.75f, 0.5f);
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(-0.5f, -2f, 0.75f, 0.5f);
 
         boolean capturesMouseEventAtPoint = globalLoopingAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(0.123f, 0.456f), 789L);
+                .capturesMouseEventAtPoint(vertexOf(0.123f, 0.456f), 789L);
 
         assertTrue(capturesMouseEventAtPoint);
-        ArrayList<Pair<Integer, Integer>> capturesMouseEventsAtPixelInputs =
+        List<Pair<Integer, Integer>> capturesMouseEventsAtPixelInputs =
                 snippetImage.CapturesMouseEventsAtPixelInputs;
         assertEquals(1, capturesMouseEventsAtPixelInputs.size());
         assertEquals(
                 (int) (((((0.123f - 0.0123f) - (-0.5f)) / (0.75f - (-0.5f))) * (750 - 250)) + 250),
-                (int) capturesMouseEventsAtPixelInputs.get(0).item1());
+                (int) capturesMouseEventsAtPixelInputs.getFirst().FIRST);
         assertEquals(
                 (int) (((((0.456f - 0.0456f) - (-2.0f)) / (0.5f - (-2.0f))) * (2500 - 1000))
                         + 1000),
-                (int) capturesMouseEventsAtPixelInputs.get(0).item2());
+                (int) capturesMouseEventsAtPixelInputs.getFirst().SECOND);
         assertEquals(1, RENDERING_AREA_PROVIDER.TimestampInputs.size());
-        assertEquals(789L, (long) RENDERING_AREA_PROVIDER.TimestampInputs.get(0));
+        assertEquals(789L, (long) RENDERING_AREA_PROVIDER.TimestampInputs.getFirst());
     }
 
     @Test
-    void testCapturesMouseEventAtPointDoesNotExceedRenderingBoundaries() {
+    public void testCapturesMouseEventAtPointDoesNotExceedRenderingBoundaries() {
         FakeAnimationFrameSnippet animationFrameSnippet = new FakeAnimationFrameSnippet();
         animationFrameSnippet.OffsetX = 0.0123f;
         animationFrameSnippet.OffsetY = 0.0456f;
@@ -641,101 +638,56 @@ class GlobalLoopingAnimationRenderableImplTests {
         GLOBAL_LOOPING_ANIMATION_SUPPORTING_MOUSE_EVENTS.Animation = animation;
         ((FakeImage) animationFrameSnippet.Image).SupportsMouseEventCapturing = true;
         RENDERING_AREA_PROVIDER.ProvidedValue = WHOLE_SCREEN;
-        when(mockRenderingBoundaries.currentBoundaries()).thenReturn(new FloatBox() {
-            @Override
-            public float leftX() {
-                return 0f;
-            }
-
-            @Override
-            public float topY() {
-                return 0f;
-            }
-
-            @Override
-            public float rightX() {
-                return 0.5f;
-            }
-
-            @Override
-            public float bottomY() {
-                return 1f;
-            }
-
-            @Override
-            public float width() {
-                return 0;
-            }
-
-            @Override
-            public float height() {
-                return 0;
-            }
-
-            @Override
-            public FloatBox intersection(FloatBox floatBox) throws IllegalArgumentException {
-                return null;
-            }
-
-            @Override
-            public FloatBox translate(float v, float v1) {
-                return null;
-            }
-
-            @Override
-            public String getInterfaceName() {
-                return null;
-            }
-        });
+        when(mockRenderingBoundaries.currentBoundaries()).thenReturn(floatBoxOf(0f, 0f, 0.5f, 1f));
 
         assertTrue(globalLoopingAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(0.499f, 0f), TIMESTAMP));
+                .capturesMouseEventAtPoint(vertexOf(0.499f, 0f), TIMESTAMP));
         assertFalse(globalLoopingAnimationRenderableWithMouseEvents
-                .capturesMouseEventAtPoint(Vertex.of(0.501f, 0f), TIMESTAMP));
+                .capturesMouseEventAtPoint(vertexOf(0.501f, 0f), TIMESTAMP));
     }
 
     @Test
-    void testCapturesMouseEventAtPointWithInvalidParams() {
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(.5f, .5f, 1.5f, 1.5f);
+    public void testCapturesMouseEventAtPointWithInvalidArgs() {
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(.5f, .5f, 1.5f, 1.5f);
         GLOBAL_LOOPING_ANIMATION_SUPPORTING_MOUSE_EVENTS.Animation = new FakeAnimation(100);
 
         float verySmallNumber = 0.0001f;
 
         assertThrows(UnsupportedOperationException.class, () ->
                 globalLoopingAnimationRenderableWithoutMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f, 0f), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(0f, 0f), 0L));
 
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(.5f - verySmallNumber, .75f), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(.5f - verySmallNumber, .75f), 0L));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(1f + verySmallNumber, .75f), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(1f + verySmallNumber, .75f), 0L));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(.75f, .5f - verySmallNumber), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(.75f, .5f - verySmallNumber), 0L));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(.75f, 1.5f + verySmallNumber), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(.75f, 1.5f + verySmallNumber), 0L));
 
-        RENDERING_AREA_PROVIDER.ProvidedValue = new FakeFloatBox(-0.5f, -0.5f, 0.5f, 0.5f);
+        RENDERING_AREA_PROVIDER.ProvidedValue = floatBoxOf(-0.5f, -0.5f, 0.5f, 0.5f);
 
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0f - verySmallNumber, .25f), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(0f - verySmallNumber, .25f), 0L));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(0.5f + verySmallNumber, .25f), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(0.5f + verySmallNumber, .25f), 0L));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(.25f, 0f - verySmallNumber), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(.25f, 0f - verySmallNumber), 0L));
         assertThrows(IllegalArgumentException.class, () ->
                 globalLoopingAnimationRenderableWithMouseEvents
-                        .capturesMouseEventAtPoint(Vertex.of(.25f, 0.5f + verySmallNumber), 0L));
+                        .capturesMouseEventAtPoint(vertexOf(.25f, 0.5f + verySmallNumber), 0L));
     }
 
     @Test
-    void testGetAndSetZ() {
+    public void testGetAndSetZ() {
         assertEquals(Z, globalLoopingAnimationRenderableWithMouseEvents.getZ());
         assertEquals(Z, globalLoopingAnimationRenderableWithoutMouseEvents.getZ());
 
@@ -747,28 +699,28 @@ class GlobalLoopingAnimationRenderableImplTests {
         assertEquals(newZ, globalLoopingAnimationRenderableWithMouseEvents.getZ());
         assertEquals(newZ, globalLoopingAnimationRenderableWithoutMouseEvents.getZ());
 
-        verify(mockContainingStack, times(1)).add(
+        verify(mockContainingStack, once()).add(
                 globalLoopingAnimationRenderableWithMouseEvents);
-        verify(mockContainingStack, times(1)).add(
+        verify(mockContainingStack, once()).add(
                 globalLoopingAnimationRenderableWithoutMouseEvents);
     }
 
     @Test
-    void testDelete() {
+    public void testDelete() {
         globalLoopingAnimationRenderableWithMouseEvents.delete();
         globalLoopingAnimationRenderableWithoutMouseEvents.delete();
 
         assertNull(globalLoopingAnimationRenderableWithMouseEvents.containingStack());
         assertNull(globalLoopingAnimationRenderableWithoutMouseEvents.containingStack());
 
-        verify(mockContainingStack, times(1)).remove(
+        verify(mockContainingStack, once()).remove(
                 globalLoopingAnimationRenderableWithMouseEvents);
-        verify(mockContainingStack, times(1)).remove(
+        verify(mockContainingStack, once()).remove(
                 globalLoopingAnimationRenderableWithoutMouseEvents);
     }
 
     @Test
-    void testUuid() {
+    public void testUuid() {
         assertSame(UUID, globalLoopingAnimationRenderableWithMouseEvents.uuid());
         assertSame(UUID, globalLoopingAnimationRenderableWithoutMouseEvents.uuid());
     }
