@@ -8,106 +8,97 @@ import org.junit.jupiter.api.Test;
 import soliloquy.specs.graphics.rendering.timing.FrameRateReporter;
 import soliloquy.specs.graphics.rendering.timing.FrameRateReporterAggregateOutput;
 
-import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.List;
 import java.util.TimeZone;
 
 import static inaugural.soliloquy.graphics.api.Constants.GMT;
 import static inaugural.soliloquy.graphics.api.Constants.MS_PER_SECOND;
+import static inaugural.soliloquy.tools.collections.Collections.listOf;
 import static org.junit.jupiter.api.Assertions.*;
 
-class FrameRateReporterImplTests {
+public class FrameRateReporterImplTests {
     private final String FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID =
             "frameRateReporterAggregateOutputId";
     private final FakeFrameRateReporterAggregateOutput FRAME_RATE_REPORTER_AGGREGATE_OUTPUT =
             new FakeFrameRateReporterAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
-    private final ArrayList<FrameRateReporterAggregateOutput> AGGREGATE_OUTPUTS =
-            new ArrayList<FrameRateReporterAggregateOutput>() {{
-                add(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT);
-            }};
+    private final List<FrameRateReporterAggregateOutput> AGGREGATE_OUTPUTS =
+            listOf(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT);
     private final int PERIODS_PER_AGGREGATE = 3;
 
-    private long _startingDatetime;
-    private FrameRateReporter _frameRateReporter;
+    private long startingDatetime;
+    private FrameRateReporter frameRateReporter;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         Calendar calendar = Calendar.getInstance(TimeZone.getTimeZone(GMT));
 
         calendar.set(2021, Calendar.APRIL, 8, 0, 4, 31);
-        _startingDatetime = calendar.getTimeInMillis();
+        startingDatetime = calendar.getTimeInMillis();
 
-        _frameRateReporter = new FrameRateReporterImpl(PERIODS_PER_AGGREGATE, AGGREGATE_OUTPUTS);
+        frameRateReporter = new FrameRateReporterImpl(PERIODS_PER_AGGREGATE, AGGREGATE_OUTPUTS);
     }
 
     @Test
-    void testConstructorWithInvalidParams() {
+    public void testConstructorWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class,
                 () -> new FrameRateReporterImpl(0, AGGREGATE_OUTPUTS));
         assertThrows(IllegalArgumentException.class,
                 () -> new FrameRateReporterImpl(PERIODS_PER_AGGREGATE, null));
         assertThrows(IllegalArgumentException.class,
                 () -> new FrameRateReporterImpl(PERIODS_PER_AGGREGATE,
-                        new ArrayList<FrameRateReporterAggregateOutput>() {{
-                            add(null);
-                        }}));
+                        listOf((FrameRateReporterAggregateOutput) null)));
         assertThrows(IllegalArgumentException.class,
                 () -> new FrameRateReporterImpl(PERIODS_PER_AGGREGATE,
-                        new ArrayList<FrameRateReporterAggregateOutput>() {{
-                            add(new FakeFrameRateReporterAggregateOutput(null));
-                        }}));
+                        listOf(new FakeFrameRateReporterAggregateOutput(null))));
         assertThrows(IllegalArgumentException.class,
                 () -> new FrameRateReporterImpl(PERIODS_PER_AGGREGATE,
-                        new ArrayList<FrameRateReporterAggregateOutput>() {{
-                            add(new FakeFrameRateReporterAggregateOutput(""));
-                        }}));
+                        listOf(new FakeFrameRateReporterAggregateOutput(""))));
         assertThrows(IllegalArgumentException.class,
                 () -> new FrameRateReporterImpl(PERIODS_PER_AGGREGATE,
-                        new ArrayList<FrameRateReporterAggregateOutput>() {{
-                            add(new FakeFrameRateReporterAggregateOutput(
-                                    FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID));
-                            add(new FakeFrameRateReporterAggregateOutput(
-                                    FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID));
-                        }}));
+                        listOf(new FakeFrameRateReporterAggregateOutput(
+                                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID),
+                                new FakeFrameRateReporterAggregateOutput(
+                                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID))));
     }
 
     @Test
-    void testReportFrameRateAndCurrentActualFps() {
+    public void testReportFrameRateAndCurrentActualFps() {
         float actualFps = 123f;
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, null, actualFps);
+        frameRateReporter.reportFrameRate(startingDatetime, null, actualFps);
 
-        assertEquals((Float) actualFps, _frameRateReporter.currentActualFps());
+        assertEquals((Float) actualFps, frameRateReporter.currentActualFps());
     }
 
     @Test
-    void testReportFrameRateWithInvalidParams() {
+    public void testReportFrameRateWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportFrameRate(_startingDatetime, -0.0001f,
+                () -> frameRateReporter.reportFrameRate(startingDatetime, -0.0001f,
                         0f));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportFrameRate(_startingDatetime, null,
+                () -> frameRateReporter.reportFrameRate(startingDatetime, null,
                         -0.0001f));
     }
 
     @Test
-    void testReportFrameRateForInvalidDatetimes() {
+    public void testReportFrameRateForInvalidDatetimes() {
         float actualFps = 123f;
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, null, actualFps);
+        frameRateReporter.reportFrameRate(startingDatetime, null, actualFps);
 
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportFrameRate(_startingDatetime + 999, null,
+                () -> frameRateReporter.reportFrameRate(startingDatetime + 999, null,
                         actualFps));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportFrameRate(_startingDatetime + 1001, null,
+                () -> frameRateReporter.reportFrameRate(startingDatetime + 1001, null,
                         actualFps));
     }
 
     @SuppressWarnings("WrapperTypeMayBePrimitive")
     @Test
-    void testReportFrameRateSendToAggregate() {
+    public void testReportFrameRateSendToAggregate() {
         Float targetFps1 = 0.7269f;
         Float targetFps2 = 0.6822f;
         Float targetFps3 = 0.2221f;
@@ -116,14 +107,14 @@ class FrameRateReporterImplTests {
         float actualFps2 = 0.1266f;
         float actualFps3 = 0.5525f;
         float actualFps4 = 0.5632f;
-        _frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps2,
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps2,
                 actualFps2);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps3,
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps3,
                 actualFps3);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 3000, targetFps4,
+        frameRateReporter.reportFrameRate(startingDatetime + 3000, targetFps4,
                 actualFps4);
 
         assertEquals(1,
@@ -132,19 +123,19 @@ class FrameRateReporterImplTests {
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.size());
         assertEquals(1,
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.size());
-        assertEquals(new Date(_startingDatetime),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(0));
+        assertEquals(new Date(startingDatetime),
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.getFirst());
         assertEquals(Tools.round(((targetFps1 / 3f) + (targetFps2 / 3f) + (targetFps3 / 3f)), 3),
                 Tools.round(
-                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(0),
+                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.getFirst(),
                         3));
         assertEquals((Float) ((actualFps1 / 3f) + (actualFps2 / 3f) + (actualFps3 / 3f)),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.get(0));
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.getFirst());
     }
 
     @SuppressWarnings("WrapperTypeMayBePrimitive")
     @Test
-    void testReportFrameRateSendToAggregateWithSomeNullTargetFps() {
+    public void testReportFrameRateSendToAggregateWithSomeNullTargetFps() {
         Float targetFps1 = 0.7269f;
         Float targetFps2 = null;
         Float targetFps3 = 0.2221f;
@@ -157,20 +148,20 @@ class FrameRateReporterImplTests {
         float actualFps4 = 0.5632f;
         float actualFps5 = 0.0375f;
         float actualFps6 = 0.7415f;
-        _frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
 
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps2,
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps2,
                 actualFps2);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps3,
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps3,
                 actualFps3);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 3000, targetFps4,
+        frameRateReporter.reportFrameRate(startingDatetime + 3000, targetFps4,
                 actualFps4);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 4000, targetFps5,
+        frameRateReporter.reportFrameRate(startingDatetime + 4000, targetFps5,
                 actualFps5);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 5000, targetFps6,
+        frameRateReporter.reportFrameRate(startingDatetime + 5000, targetFps6,
                 actualFps6);
 
 
@@ -182,14 +173,14 @@ class FrameRateReporterImplTests {
         assertEquals(2,
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.size());
 
-        assertEquals(new Date(_startingDatetime),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(0));
+        assertEquals(new Date(startingDatetime),
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.getFirst());
         assertEquals((Float) ((targetFps1 / 2f) + (targetFps3 / 2f)),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(0));
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.getFirst());
         assertEquals((Float) ((actualFps1 / 3f) + (actualFps2 / 3f) + (actualFps3 / 3f)),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.get(0));
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.getFirst());
 
-        assertEquals(new Date(_startingDatetime + 3000),
+        assertEquals(new Date(startingDatetime + 3000),
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(1));
         assertEquals(
                 Tools.round(((targetFps4 / 3f) + (targetFps5 / 3f) + (targetFps6 / 3f)), 3),
@@ -204,7 +195,7 @@ class FrameRateReporterImplTests {
     }
 
     @Test
-    void testReportFrameRateSendToAggregateWithAllNullTargetFps() {
+    public void testReportFrameRateSendToAggregateWithAllNullTargetFps() {
         Float targetFps1 = null;
         Float targetFps2 = null;
         Float targetFps3 = null;
@@ -213,14 +204,14 @@ class FrameRateReporterImplTests {
         float actualFps2 = 0.1266f;
         float actualFps3 = 0.5525f;
         float actualFps4 = 0.5632f;
-        _frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps2,
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps2,
                 actualFps2);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps3,
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps3,
                 actualFps3);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 3000, targetFps4,
+        frameRateReporter.reportFrameRate(startingDatetime + 3000, targetFps4,
                 actualFps4);
 
         assertEquals(1,
@@ -229,16 +220,16 @@ class FrameRateReporterImplTests {
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.size());
         assertEquals(1,
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.size());
-        assertEquals(new Date(_startingDatetime),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(0));
-        assertNull(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(0));
+        assertEquals(new Date(startingDatetime),
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.getFirst());
+        assertNull(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.getFirst());
         assertEquals((Float) ((actualFps1 / 3f) + (actualFps2 / 3f) + (actualFps3 / 3f)),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.get(0));
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.getFirst());
     }
 
     @SuppressWarnings("WrapperTypeMayBePrimitive")
     @Test
-    void testDeactivateAndActivateAggregateOutput() {
+    public void testDeactivateAndActivateAggregateOutput() {
         Float targetFps1 = 0.7269f;
         Float targetFps2 = null;
         Float targetFps3 = 0.2221f;
@@ -251,26 +242,26 @@ class FrameRateReporterImplTests {
         float actualFps4 = 0.5632f;
         float actualFps5 = 0.0375f;
         float actualFps6 = 0.7415f;
-        _frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
 
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps2,
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps2,
                 actualFps2);
 
-        _frameRateReporter.deactivateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.deactivateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps3,
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps3,
                 actualFps3);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 3000, targetFps4,
+        frameRateReporter.reportFrameRate(startingDatetime + 3000, targetFps4,
                 actualFps4);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 4000, targetFps5,
+        frameRateReporter.reportFrameRate(startingDatetime + 4000, targetFps5,
                 actualFps5);
 
-        _frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
-        _frameRateReporter.reportFrameRate(_startingDatetime + 5000, targetFps6,
+        frameRateReporter.reportFrameRate(startingDatetime + 5000, targetFps6,
                 actualFps6);
 
 
@@ -282,63 +273,63 @@ class FrameRateReporterImplTests {
         assertEquals(1,
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.size());
 
-        assertEquals(new Date(_startingDatetime + 3000),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(0));
+        assertEquals(new Date(startingDatetime + 3000),
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.getFirst());
         assertEquals(
                 Tools.round(((targetFps4 / 3f) + (targetFps5 / 3f) + (targetFps6 / 3f)), 3),
                 Tools.round(
-                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(0),
+                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.getFirst(),
                         3));
         assertEquals(
                 Tools.round(((actualFps4 / 3f) + (actualFps5 / 3f) + (actualFps6 / 3f)), 3),
                 Tools.round(
-                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.get(0),
+                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.getFirst(),
                         3));
     }
 
     @Test
-    void testDeactivateAndActivateAggregateOutputWithInvalidParams() {
+    public void testDeactivateAndActivateAggregateOutputWithInvalidArgs() {
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.deactivateAggregateOutput(null));
+                () -> frameRateReporter.deactivateAggregateOutput(null));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.deactivateAggregateOutput(""));
+                () -> frameRateReporter.deactivateAggregateOutput(""));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.deactivateAggregateOutput("Invalid Id"));
+                () -> frameRateReporter.deactivateAggregateOutput("Invalid Id"));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.activateAggregateOutput(null));
+                () -> frameRateReporter.activateAggregateOutput(null));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.activateAggregateOutput(""));
+                () -> frameRateReporter.activateAggregateOutput(""));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.activateAggregateOutput("Invalid Id"));
+                () -> frameRateReporter.activateAggregateOutput("Invalid Id"));
     }
 
     @Test
-    void testPausedPeriodCausesCurrentFpsToReturnNull() {
+    public void testPausedPeriodCausesCurrentFpsToReturnNull() {
         Float targetFps1 = 0.7269f;
         float actualFps1 = 0.2626f;
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
 
-        assertNotNull(_frameRateReporter.currentActualFps());
+        assertNotNull(frameRateReporter.currentActualFps());
 
-        _frameRateReporter.reportPause(_startingDatetime + 1500);
+        frameRateReporter.reportPause(startingDatetime + 1500);
 
-        assertNull(_frameRateReporter.currentActualFps());
+        assertNull(frameRateReporter.currentActualFps());
 
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps1, actualFps1);
 
-        assertNull(_frameRateReporter.currentActualFps());
+        assertNull(frameRateReporter.currentActualFps());
 
-        _frameRateReporter.reportUnpause(_startingDatetime + 2500);
+        frameRateReporter.reportUnpause(startingDatetime + 2500);
 
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps1, actualFps1);
 
-        assertNotNull(_frameRateReporter.currentActualFps());
+        assertNotNull(frameRateReporter.currentActualFps());
     }
 
     @SuppressWarnings("WrapperTypeMayBePrimitive")
     @Test
-    void testReportPauseAndUnpauseSendsCurrentPeriodWeightedByPausePercentageToOutputs() {
+    public void testReportPauseAndUnpauseSendsCurrentPeriodWeightedByPausePercentageToOutputs() {
         Float targetFps1 = 0.7269f;
         Float targetFps2 = 0.6822f;
         Float targetFps3 = 0.2221f;
@@ -351,39 +342,39 @@ class FrameRateReporterImplTests {
         float actualFps4 = 0.5632f;
         float actualFps5 = 0.0375f;
         float actualFps6 = 0.7415f;
-        _frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
+        frameRateReporter.activateAggregateOutput(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT_ID);
 
 
 
         // 100% of period 1
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
 
-        _frameRateReporter.reportPause(_startingDatetime + 1800);
+        frameRateReporter.reportPause(startingDatetime + 1800);
 
         // 80% of period 2
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps2,
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps2,
                 actualFps2);
 
         // 0% of period 3
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps3,
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps3,
                 actualFps3);
 
-        _frameRateReporter.reportUnpause(_startingDatetime + 3500);
+        frameRateReporter.reportUnpause(startingDatetime + 3500);
 
         // 50% of period 4
-        _frameRateReporter.reportFrameRate(_startingDatetime + 3000, targetFps4,
+        frameRateReporter.reportFrameRate(startingDatetime + 3000, targetFps4,
                 actualFps4);
 
-        _frameRateReporter.reportPause(_startingDatetime + 4100);
+        frameRateReporter.reportPause(startingDatetime + 4100);
 
-        _frameRateReporter.reportUnpause(_startingDatetime + 4400);
+        frameRateReporter.reportUnpause(startingDatetime + 4400);
 
         // 70% of period 5
-        _frameRateReporter.reportFrameRate(_startingDatetime + 4000, targetFps5,
+        frameRateReporter.reportFrameRate(startingDatetime + 4000, targetFps5,
                 actualFps5);
 
         // 100% of period 6, but 0% of targetFps for period 6
-        _frameRateReporter.reportFrameRate(_startingDatetime + 5000, targetFps6,
+        frameRateReporter.reportFrameRate(startingDatetime + 5000, targetFps6,
                 actualFps6);
 
 
@@ -395,17 +386,17 @@ class FrameRateReporterImplTests {
         assertEquals(2,
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.size());
 
-        assertEquals(new Date(_startingDatetime),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(0));
+        assertEquals(new Date(startingDatetime),
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.getFirst());
         assertEquals(
                 Tools.round(((targetFps1 / 1.8f) + ((targetFps2 * 0.8f) / 1.8f)), 3),
                 Tools.round(
-                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(0),
+                        FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.getFirst(),
                         3));
         assertEquals((Float) ((actualFps1 / 1.8f) + ((actualFps2 * 0.8f) / 1.8f)),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.get(0));
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.getFirst());
 
-        assertEquals(new Date(_startingDatetime + 3000),
+        assertEquals(new Date(startingDatetime + 3000),
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(1));
         assertEquals((Float) (((targetFps4 * 0.5f) / 1.2f) + ((targetFps5 * 0.7f) / 1.2f)),
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(1));
@@ -418,20 +409,20 @@ class FrameRateReporterImplTests {
     }
 
     @Test
-    void testReportEntirelyPausedPeriodSendsNullValues() {
+    public void testReportEntirelyPausedPeriodSendsNullValues() {
         Float targetFps1 = 0.7269f;
         Float targetFps2 = 0.6822f;
         Float targetFps3 = 0.2221f;
         float actualFps1 = 0.2626f;
         float actualFps2 = 0.1266f;
         float actualFps3 = 0.5525f;
-        _frameRateReporter.reportPause(_startingDatetime - MS_PER_SECOND);
+        frameRateReporter.reportPause(startingDatetime - MS_PER_SECOND);
 
 
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, targetFps1, actualFps1);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 1000, targetFps2, actualFps2);
-        _frameRateReporter.reportFrameRate(_startingDatetime + 2000, targetFps3, actualFps3);
+        frameRateReporter.reportFrameRate(startingDatetime, targetFps1, actualFps1);
+        frameRateReporter.reportFrameRate(startingDatetime + 1000, targetFps2, actualFps2);
+        frameRateReporter.reportFrameRate(startingDatetime + 2000, targetFps3, actualFps3);
 
 
 
@@ -442,36 +433,30 @@ class FrameRateReporterImplTests {
         assertEquals(1,
                 FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.size());
 
-        assertEquals(new Date(_startingDatetime),
-                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.get(0));
-        assertNull(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.get(0));
-        assertNull(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.get(0));
+        assertEquals(new Date(startingDatetime),
+                FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateDates.getFirst());
+        assertNull(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateTargetFps.getFirst());
+        assertNull(FRAME_RATE_REPORTER_AGGREGATE_OUTPUT.OutputtedAggregateActualFps.getFirst());
     }
 
     @Test
-    void testReportPauseAndUnpauseBeyondCurrentPeriod() {
+    public void testReportPauseAndUnpauseBeyondCurrentPeriod() {
         float actualFps = 123f;
 
-        _frameRateReporter.reportFrameRate(_startingDatetime, null, actualFps);
+        frameRateReporter.reportFrameRate(startingDatetime, null, actualFps);
 
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportPause(_startingDatetime + MS_PER_SECOND - 1));
+                () -> frameRateReporter.reportPause(startingDatetime + MS_PER_SECOND - 1));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportPause(_startingDatetime + (MS_PER_SECOND * 2)));
+                () -> frameRateReporter.reportPause(startingDatetime + (MS_PER_SECOND * 2)));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportUnpause(_startingDatetime + MS_PER_SECOND - 1));
+                () -> frameRateReporter.reportUnpause(startingDatetime + MS_PER_SECOND - 1));
         assertThrows(IllegalArgumentException.class,
-                () -> _frameRateReporter.reportUnpause(_startingDatetime + (MS_PER_SECOND * 2)));
+                () -> frameRateReporter.reportUnpause(startingDatetime + (MS_PER_SECOND * 2)));
     }
 
     @Test
-    void testPausedTimestamp() {
-        assertThrows(UnsupportedOperationException.class, _frameRateReporter::pausedTimestamp);
-    }
-
-    @Test
-    void testGetInterfaceName() {
-        assertEquals(FrameRateReporter.class.getCanonicalName(),
-                _frameRateReporter.getInterfaceName());
+    public void testPausedTimestamp() {
+        assertThrows(UnsupportedOperationException.class, frameRateReporter::pausedTimestamp);
     }
 }
